--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,10 @@ services:
   djangoapp:
     container_name: samuel_webscraping_djangoapp
     build:
-      context: api
+      context: djangoapp
       dockerfile: Dockerfile
     ports:
       - "${DJANGOAPP_PORT}:8000"
     volumes:
       - ./djangoapp:/usr/src/app
-    command: python app/manage.py runserver 0.0.0.0:8000
-  nginx:
-    container_name: samuel_webscraping_nginx
-    restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "${APP_PORT}:80"
-    depends_on:
-      - djangoapp
+    command: python3 app/manage.py runserver 0.0.0.0:8000
